[project]
name = "synthetic-fingerprint-generation"
version = "0.1.0"
description = "Project related to Synthetic Fingerprint generation"
authors = [
    {name = "heitor",email = "heitor.nolla@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "itk-elastix (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
